--- a/trainig_log/250414.md
+++ b/trainig_log/250414.md
@@ -20,11 +20,8 @@
 
 ## 💻 실습 예시
 
-```css
-[CSS 선택자(1)](https://scene-inventory.tistory.com/entry/CSS-CSS-선택자1전체-선택자-태그-선택자-클래스-선택자-ID-선택자)
-[CSS 선택자(1)](https://scene-inventory.tistory.com/entry/CSS-CSS-선택자2기본-속성-선택자-자식-선택자-자손후손-선택자-인접-형제-선택자-일반-형제-선택자)
-
-```
+- [CSS 선택자(1)](https://scene-inventory.tistory.com/entry/CSS-CSS-%EC%84%A0%ED%83%9D%EC%9E%901%EC%A0%84%EC%B2%B4-%EC%84%A0%ED%83%9D%EC%9E%90-%ED%83%9C%EA%B7%B8-%EC%84%A0%ED%83%9D%EC%9E%90-%ED%81%B4%EB%9E%98%EC%8A%A4-%EC%84%A0%ED%83%9D%EC%9E%90-ID-%EC%84%A0%ED%83%9D%EC%9E%90)
+- [CSS 선택자(2)](https://scene-inventory.tistory.com/entry/CSS-CSS-%EC%84%A0%ED%83%9D%EC%9E%902%EA%B8%B0%EB%B3%B8-%EC%86%8D%EC%84%B1-%EC%84%A0%ED%83%9D%EC%9E%90-%EC%9E%90%EC%8B%9D-%EC%84%A0%ED%83%9D%EC%9E%90-%EC%9E%90%EC%86%90%ED%9B%84%EC%86%90-%EC%84%A0%ED%83%9D%EC%9E%90-%EC%9D%B8%EC%A0%91-%ED%98%95%EC%A0%9C-%EC%84%A0%ED%83%9D%EC%9E%90-%EC%9D%BC%EB%B0%98-%ED%98%95%EC%A0%9C-%EC%84%A0%ED%83%9D%EC%9E%90)
 
 ## ✍️ 오늘의 회고
 
