--- a/trainig_log/250415.md
+++ b/trainig_log/250415.md
@@ -45,12 +45,12 @@
 
 ### CSS
 
-[문단 스타일링](../02_css/07_문단스타일.html)
-[목록 스타일링](../02_css/08_목록스타일.html)
-[배경 스타일링](../02_css/09_배경스타일.html)
-[레이아웃 스타일링](../02_css/10_레이아웃스타일1.html)
-[레이아웃 스타일링](../02_css/11_레이아웃스타일2.html)
-[종합 실습](../02_css/practice/)
+- [문단 스타일링](../02_css/07_문단스타일.html)
+- [목록 스타일링](../02_css/08_목록스타일.html)
+- [배경 스타일링](../02_css/09_배경스타일.html)
+- [레이아웃 스타일링](../02_css/10_레이아웃스타일1.html)
+- [레이아웃 스타일링](../02_css/11_레이아웃스타일2.html)
+- [종합 실습](../02_css/practice/)
 
 ## ✍️ 오늘의 회고
 
