--- a/trainig_log/250416.md
+++ b/trainig_log/250416.md
@@ -31,7 +31,7 @@
 
 ## 💻 실습 예시
 
-### CSS
+### Javascript(core)
 
 - [데이터 타입](<../03_javascipt(core)/01_variable>)
 - [연산자](<../03_javascipt(core)/02_operator>)
