--- a/trainig_log/250417.md
+++ b/trainig_log/250417.md
@@ -24,7 +24,7 @@
 - scope
   - 전역 변수와 지역 변수
   - 함수 레벨 스코프 : var 전역으로 선언된 변수가 다시 함수 안에서 선언되면 값이 바뀔 수 있다.
-  - let : 변수 중복 선언 x, 재할당 가능
+  - let : 변수 중복 선언 x, 재할당 가능, 단, 다른 scope일 경우 중복 선언이 가능하다.
   - const : 변수 중복 선언 x, 재할당 금지, 선언과 동시에 초기화 필수
 - 객체 생성자(object constructor)
   - new 연산자를 통해 빈 객체를 생성할 수 있다.
