--- a/trainig_log/250421.md
+++ b/trainig_log/250421.md
@@ -68,9 +68,9 @@
 
 ### Javascript(web)
 
-- [DOM](<../03_javascipt(web)/01_DOM>)
-- [EVENT](<../03_javascipt(web)/02_EVENT>)
-- [오늘의 팀 문제](../js_team_problem/250421)
+- [DOM](<../04_javascipt(web)/01_DOM>)
+- [EVENT](<../04_javascipt(web)/02_EVENT>)
+- [오늘의 팀 문제](<../04_javascipt(web)/js_team_problem/250421>)
 
 ## ✍️ 오늘의 회고
 
