--- a/trainig_log/250625.md
+++ b/trainig_log/250625.md
@@ -187,3 +187,8 @@
 - [props](../13_react//03_props/)
 
 ## ✍️ 오늘의 회고
+- 오늘은 리액트의 전반적인 개념을 공부했다.
+사실 리액트는 이미 유명한 라이브러리이고 이름도 많이 들어봤지만, 왜 쓰는지, 어떻게 쓰는지, 정확히 감이 잘 안 왔었는데 오늘 공부하면서 많이 정리된 느낌이다.
+- Virtual DOM의 개념이 처음엔 막연했는데, 실제 DOM을 전부 건드리지 않고 메모리 상에서 비교(diff)해서 필요한 부분만 바꾼다는 원리를 이해하고 나니까 왜 리액트가 빠르고 효율적인지 납득이 갔다.
+- SPA와 CSR/SSR의 개념도 이번에 확실히 정리됐다. SPA는 단순히 ‘한 페이지로 동작하는 웹앱’인 줄만 알았는데, CSR로 동작하는 구조가 대부분이고, SSR은 초기 렌더링 성능과 SEO에 유리하다는 걸 알게 되었다. 
+- 컴포넌트 합성과 props 개념도 인상 깊었다. 컴포넌트를 조합해서 구조를 만들고, 데이터를 props로 주고받는 방식이 리액트의 핵심인데, 그걸 이해하고 나니까 어떤 구조로 코드를 짜야 효율적인지도 조금씩 감이 온다. 구조 분해 할당으로 props를 쓰면 코드도 훨씬 깔끔해져서 앞으로 습관처럼 써야겠다.
