--- a/trainig_log/250627.md
+++ b/trainig_log/250627.md
@@ -61,19 +61,40 @@
     - `componentDidUpdate(prevProps, prevState, snapshot)`
       - 컴포넌트의 업데이트 작업이 끝난 후 호출
       - 주로 API 호출, side effect 작업, 혹은 snapshot 값 활용에 사용
+- Unmount
+  - 컴포넌트가 DOM에서 제거되고 브라우저 상에서 사라지는 것을 의미
+  - unmount 시 호출되는 함수
+    - `componentWillUnmount()`
+      - 컴포넌트가 웹 브라우저 상에서 사라지기 직전에 호출하는 메소드
+      - `componentDidMount`시점에 등록한 이벤트, 타이머, 직접 생성한 DOM이 있다면 제거하는 작업을 `componentWillUnmount` 호출 시 한다.
 
 #### hooks
 
-## 💻 실습 예시
+- `useEffect`
+  - React 컴포넌트가 랜더링된 이후에 특정 작업을 실행하도록 도와주는 사이드 이펙트 처리용 훅
+  - useEffect는 다음과 같은 작업에 사용된다.
+    - 데이터 가져오기(fetch, axios 등)
+    - 이벤트 리스너 등록 / 해제
+    - 타이머 설정
+    - 외부 라이브러리와의 연동
+    - 상태에 따라 조건적으로 동작 수행
+  - 예시
+    ```
+    useEffect(() => {
+      console.log("랜더링 이후 동작");
+    });
+    ```
 
--
+## 💻 실습 예시
 
 ### React
 
 - [iteration](../13_react/02_component/06_iteration/)
 - [lifecycle](../13_react/02_component/07_lifecycle/)
 - [hooks](../13_react/03_hooks/01_useEffect/)
+- [to-do list](../13_react/practice/todo-list.html)
 
 ## ✍️ 오늘의 회고
 
--
+- 오늘은 리액트의 기본 구조 중 하나인 라이프사이클과 반복 렌더링, 그리고 useEffect 훅에 대해 배웠다. 그동안 그냥 쓰기만 했던 useEffect나 render() 함수의 동작 원리를 구조적으로 이해할 수 있어서 의미 있는 시간이었다.
+- 특히 기억에 남는 건 render() 안에서 setState()를 호출하면 무한 루프가 발생한다는 점이다. 단순히 "하지 말라니까 안 해야지"가 아니라, 왜 하면 안 되는지, 그리고 어떤 구조로 루프가 발생하는지 흐름을 눈으로 그릴 수 있게 돼서 좋았다.
