--- a/trainig_log/250625.md
+++ b/trainig_log/250625.md
@@ -7,11 +7,14 @@
 #### 리액트 개요
 
 - 리액트란?
-  - React는 사용자 인터페이스(UI)를 만들기 위한 자바스크립트 라이브러리
+  - 리액트는 사용자 인터페이스(UI)를 만들기 위한 자바스크립트 라이브러리
   - 동적 UI가 필요한 웹앱에서 사용한다.
-  - 서버 사이드 랜더링(SSR)을 위한 라이브러리이다.
+  - 페이스북(메타)에서 만들었고, 컴포넌트 기반의 구조로 UI를 구성한다.
+  - 리액트 자체는 오직 뷰 역할만을 담당한다. (MVC 중 View 담당)
+  - 리액트는 기본적으로 CSR(클라이언트 사이드 렌더링)을 사용한다.
+  - 리액트는 SPA 개발에 자주 사용된다. (Virtaul DOM을 사용하기 때문)
 - 리액트의 특징
-  - Virtual DOM을 사용하여 변경된 부분만 업데이트하여 빠르고 효율적인 UI 랜더링을 제공 (성능 향상)
+  - Virtual DOM을 사용하여 변경된 부분만 최소한으로 업데이트하여 빠르고 효율적인 UI 랜더링을 제공 (성능 향상)
   - Component를 사용하여 UI 구성. 상태 및 속성을 활용하여 컴포넌트를 랜더링 할 수 있다. (코드의 재사용성 및 생산성 향상)
 - 리액트의 주요 요소
   - 엘리먼트(element) : 요소 노트, 어트리뷰트 노드, 텍스트 노드로 만들어지는 가상 DOM 개념
@@ -51,7 +54,7 @@
   - DOM은 웹 페이지의 요소에 동적으로 접근하고 수정하는 데 사용되며, 웹 애플리케이션의 동적인 기능을 구현하는 데 중요한 역할을 한다.
   - DOM을 직접 조작하는 것에 한계를 느끼게 되어 React, Vue 등 자바스크립트의 라이브러리가 등장하게 됨.
 - SPA(Single Page Application)란?
-  - 하나의 웹페이지에서 모든 콘텐츠를 로드하고, 사용자의 상호작용에 따라 동적으로 콘텐츠를 업데이트하는 웹 애플리케이션
+  - 하나의 웹페이지에서 모든 콘텐츠를 로드하고, 사용자의 상호작용에 따라 필요한 부분만 동적으로 콘텐츠를 업데이트하는 웹 애플리케이션
   - 기존 웹사이트처럼 페이지를 새로고침하지 않고도 자연스럽게 콘텐츠가 변경됨.
   - 주로 CSR 방식으로 동작한다.
   - SPA 특징
@@ -65,9 +68,15 @@
     - 랜더링이 클라이언트 쪽에서 일어나는 것
     - 서버는 요청을 받으면 클라이언트에 HTML과 JS를 보낸다.
     - 서버에서 처리 없이 클라이언트로 보내주기 때문에 자바스크립트가 모두 다운로드 되고 실행이 끝나기 전까지는 사용자는 볼 수 있는게 없다.
+    - SEO에 불리하다
+      - 브라우저에 도작한 HTML은 `<div id="root"></div>` 정도의 빈 HTML만 있고, 실제 콘텐츠는 없는 상황
+      - 실제 콘텐츠는 JavaScript 이후에 렌더링됨.
+      - 구글봇이 JavaScript를 기다리지 않거나, 실행 못 하면 콘텐츠를 못 읽어 SEO에 매우 불리해진다.
+      - 요즘은 구글봇이 일부 CSR 페이지도 인덱싱할 수 있다고는 하나 아직 완벽히 보장되는 것은 아니므로 SEO가 중요한 서비스(뉴스, 블로그, 쇼핑몰 등)는 SSR이 안전한 선택이다.
   - SSR(Server Side Rendering)
     - 서버쪽에서 렌더링 준비를 끝마친 상태로 클라이언트에 전달하는 방식
     - 서버에서 이미 렌더 가능한 상태로 클라이언트에 전달되기 때문에 JS가 다운로드 되는 동안 사용자는 무언가를 보고 있을 수 있다.
+    - CSR방식 보다 SEO에 유리하다.
 
 #### Component
 
