--- a/trainig_log/250703.md
+++ b/trainig_log/250703.md
@@ -22,16 +22,16 @@
   ```
 - 리덕스 핵심 요소
 
-  - | 요소            | 설명                                                      | 비유 (쉽게)          |
-    | --------------- | --------------------------------------------------------- | -------------------- |
-    | **Store**       | 전체 상태를 보관하는 중앙 저장소                          | 중앙 창고            |
-    | **State**       | Store에 저장된 실제 데이터                                | 창고 안의 물건       |
-    | **Action**      | 상태를 어떻게 바꿀지 설명하는 객체                        | 요청서               |
-    | **Reducer**     | Action을 받아 상태를 변경하는 순수 함수                   | 작업자               |
-    | **Dispatch**    | Action을 Reducer로 전달해 상태 변경을 요청하는 함수       | 요청서 제출함        |
-    | **Provider**    | React 앱에 Redux Store를 연결해주는 컴포넌트 (React 전용) | 창고 연결기          |
-    | **useSelector** | Store의 상태를 컴포넌트에서 가져오는 Hook                 | 창고에서 물건 꺼내기 |
-    | **useDispatch** | Action을 디스패치(보내기) 하는 Hook                       | 요청서 제출 버튼     |
+  - | 요소            | 설명                                                                                                       | 비유 (쉽게)          |
+    | --------------- | ---------------------------------------------------------------------------------------------------------- | -------------------- |
+    | **Store**       | 전체 상태를 보관하는 중앙 저장소                                                                           | 중앙 창고            |
+    | **State**       | Store에 저장된 실제 데이터                                                                                 | 창고 안의 물건       |
+    | **Action**      | 상태를 어떻게 바꿀지 설명하는 객체 (action은 type과 payload를 가지고 있고 type은 필수 payload는 옵션이다.) | 요청서               |
+    | **Reducer**     | Action을 받아 상태를 변경하는 순수 함수                                                                    | 작업자               |
+    | **Dispatch**    | Action을 Reducer로 전달해 상태 변경을 요청하는 함수                                                        | 요청서 제출함        |
+    | **Provider**    | React 앱에 Redux Store를 연결해주는 컴포넌트 (React 전용)                                                  | 창고 연결기          |
+    | **useSelector** | Store의 상태를 컴포넌트에서 가져오는 Hook                                                                  | 창고에서 물건 꺼내기 |
+    | **useDispatch** | Action을 디스패치(보내기) 하는 Hook                                                                        | 요청서 제출 버튼     |
 
 - 리덕스의 3가지 원칙
   - | 원칙                                 | 설명                                                | 왜 중요한가?                              |
